# serenade-flow

./: .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  test_main.py
.github/workflows/: python-package.yml
examples/: README.md  basic_etl_pipeline.py  hello_world.py  quickstart.py  read_and_export.py  sports_odds_processing.py
examples/cloud/aws/: s3.py
examples/cloud/gcs/: README.md  gcs_batch_processing_example.py  gcs_public_bucket_example.py
examples/cloud_integrations/: README.md
examples/cloud_integrations/Firestore/: README.md  fantasyace_cf_example.py
examples/cloud_integrations/gcs/: README.md  gcs_batch_processing_example.py  gcs_public_bucket_example.py
examples/data/: data-4XYmETu75oHN0D2xNzbtQ.csv  data-4XYmETu75oHN0D2xNzbtQ.json  data-4XYmETu75oHN0D2xNzbtQ.parquet  data-JAO7JfIEpgqbPaO1al8Vo.json  data-JAO7JfIEpgqbPaO1al8Vo.parquet  data-u8xQP-mpm1ldSTyeKSijm.json  data-u8xQP-mpm1ldSTyeKSijm.parquet
examples/deprecated/: basic_etl_pipeline.py  hello_world.py  quickstart.py  sports_odds_processing.py
examples/quickstart/: local.py  quickstart_remote_data.csv  remote.py
examples/quickstart/data/: data-JAO7JfIEpgqbPaO1al8Vo.csv  data-u8xQP-mpm1ldSTyeKSijm.csv  sports.json
scripts/: build.sh  deploy.sh  entrypoint.sh  examples.sh  format.sh  install.sh  lint.sh  purge.sh  release.sh  teardown.sh  test.sh
serenade_flow/: __init__.py  exporters.py  pipeline.py  readers.py
serenade_flow/community/: PLUGIN_TEMPLATE.md  __init__.py  gcs_data_extractor_plugin.py
serenade_flow/community/deprecated/: fantasyace_cloud_functions_plugin.py  (+1 more)
serenade_flow/plugins/: __init__.py  registry.py
serenade_flow/quality/: __init__.py  assessor.py
serenade_flow_frontend/: SeranadeFlow_Process.md  package-lock.json  package.json
serenade_flow_frontend/src/: App.svelte
src/: pipeline.py
src/components/: pipelineStatus.svelte
tests/: test_app.py  test_examples.py  test_integration.py  test_pipeline.py  test_plugins.py  test_quality.py
tests/deprecated/: deprecated_test_pipeline.py
tests/pipeline/: test_pipeline.py
tests/plugins/: test_registry.py
tests/quality/: __init__.py  test_assessor.py
(+1 files in other folders)
