
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "andy-serenade-flow"
version = "0.1.5"
authors = [
  { name="Bellanov Apilli", email="bellanovapilli@gmail.com" },
  { name="Ajay Bandaru", email="ajaybandaru17@gmail.com" }
]
description = """
  ETL Pipeline Implementation powered by WASM. Extract, Transform, and Load data from both local and remote data sources.
  """
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["serenade_flow/"]

[project.urls]
Homepage = "https://github.com/bellanov/serenade-flow"
Issues = "https://github.com/bellanov/serenade-flow/issues"
