[metadata]
name = python-template
version = v1.2.3
author = Bellanov L.L.C.
author_email = BellanovApilli@gmail.com
description = Python development template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bellanov/python-template
project_urls =
    Bug Tracker = https://github.com/bellanov/python-template/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[coverage:run]
branch = true
source = package
omit = tests/

[coverage:report]
show_missing = true
precision = 2